; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/mediatek/common/extr_mtk-btcvsd.c_get_rx_time_stamp.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/mediatek/common/extr_mtk-btcvsd.c_get_rx_time_stamp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtk_btcvsd_snd = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }
%struct.mtk_btcvsd_snd_time_buffer_info = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mtk_btcvsd_snd*, %struct.mtk_btcvsd_snd_time_buffer_info*)* @get_rx_time_stamp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_rx_time_stamp(%struct.mtk_btcvsd_snd* %0, %struct.mtk_btcvsd_snd_time_buffer_info* %1) #0 {
  %3 = alloca %struct.mtk_btcvsd_snd*, align 8
  %4 = alloca %struct.mtk_btcvsd_snd_time_buffer_info*, align 8
  store %struct.mtk_btcvsd_snd* %0, %struct.mtk_btcvsd_snd** %3, align 8
  store %struct.mtk_btcvsd_snd_time_buffer_info* %1, %struct.mtk_btcvsd_snd_time_buffer_info** %4, align 8
  %5 = load %struct.mtk_btcvsd_snd*, %struct.mtk_btcvsd_snd** %3, align 8
  %6 = getelementptr inbounds %struct.mtk_btcvsd_snd, %struct.mtk_btcvsd_snd* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.mtk_btcvsd_snd_time_buffer_info*, %struct.mtk_btcvsd_snd_time_buffer_info** %4, align 8
  %11 = getelementptr inbounds %struct.mtk_btcvsd_snd_time_buffer_info, %struct.mtk_btcvsd_snd_time_buffer_info* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load %struct.mtk_btcvsd_snd*, %struct.mtk_btcvsd_snd** %3, align 8
  %13 = getelementptr inbounds %struct.mtk_btcvsd_snd, %struct.mtk_btcvsd_snd* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.mtk_btcvsd_snd_time_buffer_info*, %struct.mtk_btcvsd_snd_time_buffer_info** %4, align 8
  %18 = getelementptr inbounds %struct.mtk_btcvsd_snd_time_buffer_info, %struct.mtk_btcvsd_snd_time_buffer_info* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
